adding structure MVC-DDD
